NFDIV-4214 tests